--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,10 @@
 <div id="footer" class="row">
 	<div class="row">
 		<div class="col-md-6 col-sm-8 col-xs-12 text-left">
-			<%= image_tag "#{AppSettings['design.footer_mini_logo']}", width: 20 %> <%= link_to t(:powered_by), 'http://helpy.io/' %>
+			<%= image_tag '/uploads/logos/mentor-stacks-dark.png', width: 20 %> Copyright © 2018 Mentor.
 		</div>
 		<div class="col-md-6 col-sm-4 text-right hidden-xs">
-			<%= link_to t(:get_your_copy), "http://github.com/helpyio/helpy" %>.<br/>
-      <%= "#{t(:version)} #{APP_VERSION}" %>
+
 		</div>
 	<div>
 </div>
