--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div id="footer" class="row">
 	<div class="row">
 		<div class="col-md-6 col-sm-8 col-xs-12 text-left">
-			<%= image_tag '/uploads/logos/mentor-stacks-dark.png', width: 20 %> Copyright © 2018 Mentor.
+			<%= image_tag 'https://mentor-assets.s3.amazonaws.com/mentor-stacks-white.png', width: 20 %> Copyright © 2018 Mentor.
 		</div>
 		<div class="col-md-6 col-sm-4 text-right hidden-xs">
 
