--- a/app/views/widget/topics/thanks.html.erb
+++ b/app/views/widget/topics/thanks.html.erb
@@ -16,7 +16,7 @@
     <p><%= t('new_user', default: "Thank you for contacting us.  Your message has been received by our support team and we will be in touch with you shortly with a response.") %></p>
 
     <p class="widget-footer">
-      <%= image_tag '/uploads/logos/mentor-stacks-dark.png', width: 20 %> Copyright © 2018 Mentor.
+      <%= image_tag 'https://mentor-assets.s3.amazonaws.com/mentor-stacks-white.png', width: 20 %> Copyright © 2018 Mentor.
     </p>
   </div>
 <% end %>
